--- a/index_prod.html
+++ b/index_prod.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>JavaScript HTML App</title>
-    <link rel="stylesheet" href="./dist/main.cb8530561864fde2648d.css">
+    <link rel="stylesheet" href="./dist/main.css">
 </head>
 <body>
     <div id="app">Hello</div>
-    <script type="text/javascript" src="./dist/main.cb8530561864fde2648d.js"></script>
+    <script type="text/javascript" src="./dist/main.dd7ff5e60d212dbe736d.js"></script>
 </body>
 </html>
