--- a/index_prod.html
+++ b/index_prod.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <title>JavaScript HTML App</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <link rel="stylesheet" href="./dist/main.css">
 </head>
 <body>
     <div id="app">Hello</div>
-    <script type="text/javascript" src="./dist/main.dd7ff5e60d212dbe736d.js"></script>
+    <script type="text/javascript" src="./dist/main.d26a30c038db69117d57.js"></script>
 </body>
 </html>
