--- a/index_prod.html
+++ b/index_prod.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="app">Hello</div>
-    <script type="text/javascript" src="./dist/main.b92c6e9f1e134a935095.js"></script>
+    <div id="name">{{name}}</div>
+    <script src="//cdn.bootcss.com/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <script type="text/javascript" src="./dist/main.d4e429b02545c5bd432c.js"></script>
 </body>
 </html>
