--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 <body>
     <div id="app">Hello</div>
+    <script src="//cdn.bootcss.com/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script type="text/javascript" src="./dist/main.js"></script>
 </body>
 </html>
